[package]
name = "intuicio-frontend-simpleton"
version = "0.40.0"
edition = "2021"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
description = "Simpleton frontend module for Intuicio scripting platform"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/PsichiX/intuicio"
repository = "https://github.com/PsichiX/intuicio"
documentation = "https://docs.rs/intuicio-frontend-simpleton"
readme = "../../README.md"

[features]
default = ["console", "fs", "process", "net", "jobs", "plugins", "ffi"]
console = []
fs = []
process = []
net = []
jobs = []
plugins = []
ffi = ["intuicio-ffi"]

[dependencies]
intuicio-data = { version = "0.40", path = "../../platform/data" }
intuicio-core = { version = "0.40", path = "../../platform/core" }
intuicio-nodes = { version = "0.40", path = "../../platform/nodes" }
intuicio-plugins = { version = "0.40", path = "../../platform/plugins" }
intuicio-derive = { version = "0.40", path = "../../platform/derive" }
intuicio-ffi = { version = "0.40", path = "../../platform/ffi", optional = true }
intuicio-framework-dynamic = { version = "0.40", path = "../../frameworks/dynamic" }
pest = "2.5"
pest_derive = "2.5"
regex = "1"
serde = "1"
serde_json = "1"
toml = "0.8"
bincode = "1.3"
byteorder = "1.4"
snailquote = "0.3"
rand = "0.8"
typid = "1"

[dev-dependencies]
intuicio-backend-vm = { version = "0.40", path = "../../backends/vm" }
