[package]
name = "intuicio-frontend-vault"
version = "0.3.3"
edition = "2021"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
description = "Vault frontend module for Intuicio scripting platform"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/PsichiX/intuicio"
repository = "https://github.com/PsichiX/intuicio"
documentation = "https://docs.rs/intuicio-frontend-vault"
readme = "../../README.md"

[dependencies]
intuicio-data = { version = "0.3", path = "../../data" }
intuicio-core = { version = "0.3", path = "../../core" }
serde = { version = "1", features = ["derive", "rc"] }
serde-lexpr = "0.1"

[dev-dependencies]
intuicio-backend-vm = { version = "0.3", path = "../../backends/vm" }
