[package]
name = "intuicio-core"
version = "0.27.2"
edition = "2021"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
description = "Core module for Intuicio scripting platform"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/PsichiX/intuicio"
repository = "https://github.com/PsichiX/intuicio"
documentation = "https://docs.rs/intuicio-core"
readme = "../../README.md"

[dependencies]
intuicio-data = { version = "0.27", path = "../data" }
serde = { version = "1", features = ["derive", "rc"] }
memoffset = "0.9"
typid = "1"
pest = "2.5"
pest_derive = "2.5"
snailquote = "0.3"

[dev-dependencies]
intuicio-derive = { version = "0.27", path = "../derive" }
