[package]
name = "intuicio-data"
version = "0.45.9"
edition = "2024"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
description = "Data module for Intuicio scripting platform"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/PsichiX/intuicio"
repository = "https://github.com/PsichiX/intuicio"
documentation = "https://docs.rs/intuicio-data"
readme = "../../README.md"

[dependencies]
typid = "1"
rustc-hash = "2"
smallvec = "1.13"
