[package]
name = "intuicio-data"
version = "0.48.7"
edition = "2024"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
description = "Data module for Intuicio scripting platform"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/PsichiX/intuicio"
repository = "https://github.com/PsichiX/intuicio"
documentation = "https://docs.rs/intuicio-data"
readme = "../../README.md"

[features]
alloc-backtrace = []
typehash_debug_name = []

[dependencies]
typid = "1"
rustc-hash = "2"
smallvec = "1.13"

[dev-dependencies]
pollster = { version = "0.4", features = ["macro"] }
