[package]
name = "intuicio-derive"
version = "0.17.1"
edition = "2021"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
description = "Procedural macro module for Intuicio scripting platform"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/PsichiX/intuicio"
repository = "https://github.com/PsichiX/intuicio"
documentation = "https://docs.rs/intuicio-derive"
readme = "../../README.md"

[dependencies]
syn = { version = "1", features = ["full", "extra-traits"] }
quote = "1.0"

[lib]
proc-macro = true