[package]
name = "intuicio-ffi"
version = "0.39.5"
edition = "2021"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
description = "FFI module for Intuicio scripting platform"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/PsichiX/intuicio"
repository = "https://github.com/PsichiX/intuicio"
documentation = "https://docs.rs/intuicio-ffi"
readme = "../../README.md"

[dependencies]
intuicio-core = { version = "0.39", path = "../core" }
libffi = "3.2"
libloading = "0.8"