[package]
name = "intuicio-ffi"
version = "0.45.7"
edition = "2024"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
description = "FFI module for Intuicio scripting platform"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/PsichiX/intuicio"
repository = "https://github.com/PsichiX/intuicio"
documentation = "https://docs.rs/intuicio-ffi"
readme = "../../README.md"

[dependencies]
intuicio-core = { version = "0.45", path = "../core" }
libffi = "3.2"
libloading = "0.8"